# Document-Agent

./: .cursorignore  .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
UI/document-agent/: Dockerfile  index.html  package-lock.json  package.json
UI/document-agent/src/: App.css  App.tsx  index.css
UI/document-agent/src/chat/: chat.tsx  style.css
UI/document-agent/src/login/: login.tsx  style.css
UI/document-agent/src/routes/: ProtectedRoute.tsx  PublicRoute.tsx
UI/document-agent/src/types/: types.d.ts
UI/document-agent/src/utils/: axios.ts  crypto.ts
app/: agent.py  audio_agent.py  audio_ingestion.py  auth.py  config.py  indexer.py  main.py  rag_pipeline.py
app/models/: user_profile.py
jobs/: indexing.py
